Public/play.css
* { box-sizing: border-box; font: inherit; user-select: inherit; outline: none; margin: 0; padding: 0; }
*[hidden] { display: none !important; }

html, body {
  height: 100%;
}

body {
  margin: 0;
  display: flex;
  font-family: sans-serif;
  user-select: none;
  overflow: hidden;
}

body > div, body > form {
  flex: 1;
  overflow: hidden;
}

.loading, .disconnected {
  font-size: 5em;
}

/* Viewer */
.viewer {
  display: flex;
}  

.viewer > * {
  flex: 1;
}

.viewer .waiting {
  text-align: center;
}

.viewer .gameUrl {
  display: block;
  font-size: 2em;
}

/* Player */
.player {
  display: flex;
}

.player > * {
  flex: 1;
}

.player .waiting {
  text-align: center;
  background: #800;
}

.player .waiting .header {
  background: #ccc;
  padding: 1em;
  font-size: 1.5em;
}

.player .waiting .username {
  border: 0;
  background: #444;
  font-size: 2em;
  text-align: center;
  padding: 0.5em;
  width: 100%;
  color: #eee;
}

.player .waiting canvas {
  max-width: 100%;
}

.player .waiting button {
  border: 0;
  background: #cf4;
  width: 100%;
  font-size: 2em;
  padding: 0.5em;
}

